--- a/style.css
+++ b/style.css
@@ -9,3 +9,22 @@ h3 {
     font-size: 20px;
     font-weight: 700;
 }
+
+body {
+    font-family: Arial, sans-serif;
+
+    margin-top: 30px;
+}
+
+.chart-wrap {
+    display: flex;
+    justify-content: space-around;
+}
+
+.chart-container {
+    width: 45%;
+    height: 400px;
+}
+select {
+    margin-bottom: 20px;
+}
