--- a/style.css
+++ b/style.css
@@ -1,31 +1,47 @@
 h1 {
     font-family: 'Inter';
-    font-size: 36px;
+    font-size: 32px;
     font-weight: normal;
     padding-left: 30px;
 }
 
 h3 {
     font-family: 'Inter';
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 16px;
+    font-weight: 600;
     padding-left: 30px;
+    padding-bottom: 5px;
 }
 
 body {
     font-family: Arial, sans-serif;
-    margin-top: 30px;
 }
 
 .chart-wrap {
     display: flex;
     justify-content: space-around;
+    padding-bottom: 10px;
 }
 
 .chart-container {
     width: 45%;
     height: 400px;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 25px;
+    border-color: #ABABAB;
+    padding: 15px;
 }
+
+.area-selector {
+    border-color: #ABABAB;
+    width: 200px;
+    height: 30px;
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 select {
     margin-bottom: 20px;
 }
