--- a/style.css
+++ b/style.css
@@ -45,3 +45,21 @@ body {
 select {
     margin-bottom: 20px;
 }
+
+.conclusion {
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 25px;
+    border-color: #ABABAB;
+    width: 100%;
+    height: 300px;
+    padding: 15px;
+}
+
+.conclusion-wrap {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
