--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 h1 {
-    font-family: 'Inter';
+    font-family: 'Arial';
     font-size: 32px;
     font-weight: normal;
     padding-left: 20px;
@@ -29,7 +29,7 @@ h1 {
 }
 
 h3 {
-    font-family: 'Inter';
+    font-family: 'Arial';
     font-size: 16px;
     font-weight: 600;
     padding-left: 20px;
