--- a/style.css
+++ b/style.css
@@ -17,23 +17,24 @@
     /* margin-left: 20vw; */
     position: relative; /* Add this line */
     top: 0;
+    padding:25px;
 }
 
 h1 {
     font-family: 'Arial';
     font-size: 32px;
     font-weight: normal;
-    padding-left: 20px;
     padding-bottom: 10px;
     padding-top: 20px;
+    padding-left: 5px;
 }
 
 h3 {
     font-family: 'Arial';
     font-size: 16px;
     font-weight: 600;
-    padding-left: 20px;
     padding-bottom: 20px;
+    padding-left: 5px;
 }
 
 body {
@@ -45,6 +46,7 @@ body {
     display: flex;
     justify-content: space-around;
     padding-bottom: 10px;
+    margin-bottom: 25px;
 }
 
 .chart-container {
@@ -52,7 +54,7 @@ body {
     height: 400px;
     border-width: 1px;
     border-style: solid;
-    border-radius: 25px;
+    border-radius: 15px;
     border-color: #ABABAB;
     padding: 15px;
     background-color: white;
@@ -83,17 +85,14 @@ select {
 .green { background-color: green; }
 .red { background-color: red; }
 
-/* Conclusion styling */
 .conclusion-wrap {
     border: 2px solid #ccc;  /* Light gray border around the conclusion box */
-    border-radius: 10px;      /* Rounded corners */
-    padding: 20px;            /* Space around the conclusion */
-    width: 100%;              /* Full width */
-    max-width: 600px;         /* Max width */
-    margin: 20px auto;        /* Center the conclusion container */
-    text-align: center;       /* Center the text */
-    background-color: white;;
-    
+    border-radius: 10px;
+    padding: 20px;
+    width: 100%;
+    max-width: 100%; /* Add this line to prevent overflow */
+    box-sizing: border-box; /* Add this line to include padding and border in the width */
+    text-align: center;
+    background-color: white;
 }
-
 
